--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,8 +44,12 @@
 
     <!-- Header -->
     <header>
+                    <svg viewBox="0,0,1800,1200" width="100%" height="100%" id="svg_region">
+            </svg>
         <div class="container">
+
             <div class="intro-text">
+
 				<div class="intro-lead-in">EMBL Australia Postgraduate Symposium</div>
                 <div class="intro-heading">NOVEMBER 2018</div>
                 <a href="#services" class="page-scroll btn btn-xl">Registration Opening Soon</a>
