--- a/_includes/js.html
+++ b/_includes/js.html
@@ -15,3 +15,6 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="{{ "/js/agency.js" | prepend: site.baseurl }}"></script>
+
+    <!-- EAPS JavaScript -->
+    <script src="{{ "/js/eaps.js" | prepend: site.baseurl }}"></script>
