--- a/_includes/registration.html
+++ b/_includes/registration.html
@@ -1,9 +1,9 @@
-<!-- Services Section -->
-    <section id="services">
+<!-- Registration Section -->
+    <section id="registration">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Services</h2>
+                    <h2 class="section-heading">Registration</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
             </div>
