--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,19 +21,19 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
-                    </li>
-                    <li>
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#team">Team</a>
+                        <a class="page-scroll" href="#speakers">Speakers</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#programme">Programme</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#venue">Venue</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#registration">Registration</a>
                     </li>
                 </ul>
             </div>
@@ -45,15 +45,8 @@
     <!-- Header -->
     <header>
         <div class="container">
-            <svg viewBox="0,0,1800,1100" width="100%" class="container" id="svg_region">
+            <svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1800 1000" width="100%" height="100%" id="svg_region">
             </svg>
-
-            <div class="intro-text">
-
-                <div class="intro-lead-in">EMBL Australia Postgraduate Symposium</div>
-                <div class="intro-heading">NOVEMBER 2018</div>
-                <a href="#services" class="page-scroll btn btn-xl">Registration Opening Soon</a>
-            </div>
         </div>
     </header>
 <!--
