--- a/_includes/css/eaps.css
+++ b/_includes/css/eaps.css
@@ -1,12 +1,8 @@
 #svg_region {
-  position: absolute;
+  position: relative;
   margin-left: auto;
   margin-right: auto;
-  left: 0;
-  right: 0;
-  top: 60px;
-  max-width: 100%;
-  max-height: 100%;
+  padding-top: 60px;
 }
 
 .logo {
