--- a/_includes/header.html
+++ b/_includes/header.html
@@ -45,6 +45,10 @@
     <!-- Header -->
     <header>
         <div class="container">
+            <div class="intro-text">
+                <div class="intro-lead-in">EMBL Australia Postgraduate Symposium</div>
+                <div class="intro-heading">NOVEMBER 28th-30th, TRI</div>
+            </div>
             <svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1800 1000" width="100%" height="100%" id="svg_region">
             </svg>
         </div>
