--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -285,8 +285,13 @@ header {
 }
 
 header .intro-text {
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 100px;
+    padding-bottom: 50px;
+}
+
+header .intro-lower {
+    padding-top: 0px;
+    padding-bottom: 50px;
 }
 
 header .intro-text .intro-lead-in {
@@ -299,7 +304,6 @@ header .intro-text .intro-lead-in {
 
 header .intro-text .intro-heading {
     margin-bottom: 25px;
-    text-transform: uppercase;
     font-family: {{ site.data.template.font.primary }};
     font-size: 50px;
     font-weight: 700;
@@ -308,8 +312,8 @@ header .intro-text .intro-heading {
 
 @media(min-width:768px) {
     header .intro-text {
-        padding-top: 160px;
-        padding-bottom: 200px;
+        padding-top: 120px;
+        padding-bottom: 0px;
     }
 
     header .intro-text .intro-lead-in {
@@ -322,7 +326,6 @@ header .intro-text .intro-heading {
 
     header .intro-text .intro-heading {
         margin-bottom: 50px;
-        text-transform: uppercase;
         font-family: {{ site.data.template.font.primary }};
         font-size: 75px;
         font-weight: 700;
