--- a/_includes/css/eaps.css
+++ b/_includes/css/eaps.css
@@ -2,7 +2,8 @@
   position: relative;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 60px;
+  padding-top: 5px;
+  top: -50px;
 }
 
 .logo {
