--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,12 +7,12 @@
     <body id="page-top" class="index">
 
     {% include header.html %}
-    {% include registration.html %}
     {% include programme.html %}
     {% include about.html %}
     {% include speakers.html %}
     {% include venue.html %}
     {% include contact.html %}
+    {% include register.html %}
     {% include footer.html %}
     {% include modals.html %}
     {% include js.html %}
