--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,7 +33,7 @@
                         <a class="page-scroll" href="#venue">Venue</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#registration">Registration</a>
+						<a class="page-scroll" href="#register">Register</a>
                     </li>
                 </ul>
             </div>
