--- a/_includes/header.html
+++ b/_includes/header.html
@@ -40,16 +40,14 @@
     </nav>
 
     <!-- Header -->
-    <header>
-        <div class="container">
-                                     <div class="intro-text">
+    <header id='header'>
+        <div class="container" class='headcol'>
+				 <div class="intro-text" id="headtext">
                 <div class="intro-heading">Translational Research</div>
                                                            <div class="intro-lead-in">Linking Science and Daily Life</div>
             </div>
             <svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 3937 1456" width="100%" height="100%" id="svg_region">
             </svg>
-                       
-
         </div>
     </header>
 <!--
