--- a/_includes/register.html
+++ b/_includes/register.html
@@ -1,5 +1,5 @@
 <!-- Registration Section -->
-    <section id="registration"  class="bg-light-gray">
+    <section id="register"  class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
