--- a/_includes/header.html
+++ b/_includes/header.html
@@ -42,12 +42,18 @@
     <!-- Header -->
     <header id='header'>
         <div class="container" class='headcol'>
-				 <div class="intro-text" id="headtext">
+			<div class="intro-text" id="headtext">
                 <div class="intro-heading">Translational Research</div>
-                                                           <div class="intro-lead-in">Linking Science and Daily Life</div>
+				<div class="intro-lead-in">Linking Science and Daily Life</div>
             </div>
             <svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 3937 1456" width="100%" height="100%" id="svg_region">
             </svg>
+			<div class="col-lg-8 col-lg-offset-2 text-center intro-mid">
+				EMBL Australia Postgraduate Symposium
+			</div>
+			<div class="col-lg-8 col-lg-offset-2 text-center intro-lower">
+				28th to 30th November 2018, Brisbane
+			</div>
         </div>
     </header>
 <!--
