--- a/_includes/programme.html
+++ b/_includes/programme.html
@@ -4,23 +4,37 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Programme</h2>
-                    <h3 class="section-subheading text-muted">Download program pdf here.</h3>
+                    <h3 class="section-subheading text-muted">The programme pdf will be available for download here.</h3>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-12">
                     <ul class="timeline">
-                        <li class="timeline-inverted">
+                        <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Someday</h4>
-                                    <h4 class="subheading">Registration date</h4>
+                                    <h4>Wednesday</h4>
+                                    <h4 class="subheading">28th of November</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Register before this date!</p>
+                                    <p class="text-muted">The symposium begins in Brisbane!</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>Thursday</h4>
+                                    <h4 class="subheading">29th of November</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">The second day of EAPS18.</p>
                                 </div>
                             </div>
                         </li>
@@ -30,39 +44,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Wednesday</h4>
-                                    <h4 class="subheading">28th of November</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">The symposium begins!</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>Thursday</h4>
-                                    <h4 class="subheading">29th of November</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">We talk about sciency things!</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
                                     <h4>Friday</h4>
                                     <h4 class="subheading">30th of November</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Tearful farewells!</p>
+                                    <p class="text-muted">The final day of the symposium.</p>
                                 </div>
                             </div>
                         </li>
