--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -5,7 +5,7 @@
 
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Sponsors</h2>
-                                        <h3 class="section-subheading text-muted">Thanks to all of our generous sponsors!</h3>
+                                        <h3 class="section-subheading text-muted">Our sincere thanks to all of our sponsors, without you this event would not be possible.</h3>
 
                 </div>
                 <div class="col-md-3 col-sm-6">
@@ -16,16 +16,6 @@
                 <div class="col-md-3 col-sm-6">
                     <a href="http://www.emblaustralia.org/">
                         <img src="img/logos/embl-australia.png" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/themeforest.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/creative-market.jpg" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
 
