--- a/_includes/venue.html
+++ b/_includes/venue.html
@@ -1,10 +1,10 @@
 <!-- Portfolio Grid Section -->
-    <section id="venue" class="bg-light-gray">
+<section id="venue" class="photo_bg">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Venue</h2>
-                    <h3 class="section-subheading text-muted">EAPS18 will be held at the Translation Research Institute (TRI), Queensland.</h3>
+                    <h3 class="section-subheading text-muted">EAPS18 will be held at the Translational Research Institute (TRI) in Brisbane.</h3>
                 </div>
             </div>
             <div>
