--- a/_includes/header.html
+++ b/_includes/header.html
@@ -32,6 +32,11 @@
                     <li>
 						<a class="page-scroll" href="#register">Register</a>
                     </li>
+                    {% for network in site.social %}
+                        <li>
+                            <a href="{{ network.url }}"><i class="fa fa-{{ network.title }}"></i></a>
+                        </li>
+                    {% endfor %}
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
