--- a/_includes/register.html
+++ b/_includes/register.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Register</h2>
-                    <h3 class="section-subheading text-muted">Registration will be opening shortly. Please check back here soon.</h3>
+					<h3 class="section-subheading text-muted">Registration opens 12th of June!</h3>
                 </div>
             </div>
             <div class="row text-center">
