--- a/_includes/speakers.html
+++ b/_includes/speakers.html
@@ -7,11 +7,17 @@
                     <h3 class="section-subheading text-muted">Invited speakers at EAPS18.</h3>
                 </div>
             </div>
+				<div class="team-member">
+					<img src="img/team/placeholder.jpg" class="img-responsive img-circle img-speaker" alt="">
+					<h4>Professor Ian Frazer</h4>
+					<p class="text-muted">Keynote Speaker</p>
+				</div>
+
             <div class="row">
                 {% for member in site.people %}
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/{{ member.pic }}.jpg" class="img-responsive img-circle" alt="">
+                        <img src="img/team/{{ member.pic }}.jpg" class="img-responsive img-circle img-speaker" alt="">
                         <h4>{{ member.name }}</h4>
                         <p class="text-muted">{{ member.position }}</p>
                         <ul class="list-inline social-buttons">
