--- a/_includes/speakers.html
+++ b/_includes/speakers.html
@@ -16,10 +16,10 @@
             <div class="row">
                 {% for member in site.people %}
                 <div class="col-sm-4">
-                    <div class="team-member">
+                    <div class="team-member"  id="{{ member.id }}">
                         <img src="img/team/{{ member.pic }}.jpg" class="img-responsive img-circle img-speaker" alt="">
                         <h4>{{ member.name }}</h4>
-                        <p class="text-muted">{{ member.position }}</p>
+                        <p class="text-muted">{{ member.theme }} Speaker</p>
                         <ul class="list-inline social-buttons">
                             {% for network in member.social %}
                             <li>
