--- a/_includes/speakers.html
+++ b/_includes/speakers.html
@@ -8,7 +8,7 @@
                 </div>
             </div>
 				<div class="team-member">
-					<img src="img/team/placeholder.jpg" class="img-responsive img-circle img-speaker" alt="">
+					<img src="/img/team/placeholder.jpg" class="img-responsive img-circle img-speaker" alt="">
 					<h4>Professor Ian Frazer</h4>
 					<p class="text-muted">Keynote Speaker</p>
 				</div>
@@ -17,7 +17,7 @@
                 {% for member in site.people %}
                 <div class="col-sm-4">
                     <div class="team-member"  id="{{ member.id }}">
-                        <img src="img/team/{{ member.pic }}.jpg" class="img-responsive img-circle img-speaker" alt="">
+                        <img src="/img/team/{{ member.pic }}.jpg" class="img-responsive img-circle img-speaker" alt="">
                         <h4>{{ member.name }}</h4>
                         <p class="text-muted">{{ member.theme }} Speaker</p>
                         <ul class="list-inline social-buttons">
