--- a/_includes/js.html
+++ b/_includes/js.html
@@ -9,12 +9,10 @@
     <script src="{{ "/js/classie.js" | prepend: site.baseurl }}"></script>
     <script src="{{ "/js/cbpAnimatedHeader.js" | prepend: site.baseurl }}"></script>
 
-    <!-- Contact Form JavaScript -->
-    <script src="{{ "/js/jqBootstrapValidation.js" | prepend: site.baseurl }}"></script>
-    <script src="{{ "/js/contact_me.js" | prepend: site.baseurl }}"></script>
-
     <!-- Custom Theme JavaScript -->
     <script src="{{ "/js/agency.js" | prepend: site.baseurl }}"></script>
 
+{% if page.id == 'index' %}
     <!-- EAPS JavaScript -->
     <script src="{{ "/js/eaps.js" | prepend: site.baseurl }}"></script>
+{% endif %}
