--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -10,12 +10,12 @@
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <a href="https://www.tri.edu.au/translational-research-institute-australia">
-                        <img src="img/logos/tri_logo.png" class="img-responsive img-centered" alt="">
+                        <img src="/img/logos/tri_logo.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <a href="http://www.emblaustralia.org/">
-                        <img src="img/logos/embl-australia.png" class="img-responsive img-centered" alt="">
+                        <img src="/img/logos/embl-australia.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
 
