--- a/_layouts/generic.html
+++ b/_layouts/generic.html
@@ -7,12 +7,7 @@
     <body id="page-top" class="index">
 
     {% include navbar.html %}
-    {% include header.html %}
-    {% include speakers.html %}
-    {% include venue.html %}
-    {% include programme.html %}
-    {% include register.html %}
-    {% include sponsors.html %}
+    {{ content }}
     {% include footer.html %}
     {% include js.html %}
 
