--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -9,12 +9,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                {% if page.layout == 'default' %}
+                {% if page.id == 'index' %}
 				<a class="page-scroll" href="#page-top">
                 {% else %}
                 <a class="page-scroll" href="/">
                     {% endif %}
-                    <img src="/img/EAPS180.png" class="navbar-brand page-scroll">
+                    <img src="/img/logos/EAPS18.png" class="navbar-brand page-scroll">
 				</a>
             </div>
 
@@ -22,7 +22,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="hidden">
-                        {% if page.layout == 'default' %}
+                        {% if page.id == 'index' %}
                         <a href="#page-top"></a>
                         {% else %}
                          <a href="/"></a>
@@ -41,11 +41,6 @@
                     <li>
 						<a class="page-scroll" href="/register">Register</a>
                     </li>
-                    {% for network in site.social %}
-                        <li>
-                            <a href="{{ network.url }}"><i class="fa fa-{{ network.title }}"></i></a>
-                        </li>
-                    {% endfor %}
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
