--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -12,7 +12,7 @@
                 {% if page.id == 'index' %}
 				<a class="page-scroll" href="#page-top">
                 {% else %}
-                <a class="page-scroll" href="/">
+                <a href="/">
                     {% endif %}
                     <img src="/img/logos/EAPS18.png" class="navbar-brand page-scroll">
 				</a>
@@ -30,16 +30,16 @@
 
                     </li>
                     <li>
-                        <a class="page-scroll" href="/speakers">Speakers</a>
+                        <a href="/speakers">Speakers</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/venue">Venue</a>
+                        <a href="/venue">Venue</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/programme">Programme</a>
+                        <a href="/programme">Programme</a>
                     </li>
                     <li>
-						<a class="page-scroll" href="/register">Register</a>
+						<a href="/register">Register</a>
                     </li>
                 </ul>
             </div>
