--- a/_includes/css/eaps.css
+++ b/_includes/css/eaps.css
@@ -19,9 +19,15 @@
 }
 
 @media(max-width:768px) {
+
+  .navbar-fixed-top {
+    background-color: rgba(1,1,1,0.6);
+  }
   .navbar-brand {
     padding: 12px;
   }
+
+
 }
 
 
