--- a/_includes/venue.html
+++ b/_includes/venue.html
@@ -2,13 +2,33 @@
 <section id="venue" class="photo_bg">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
+                <div class="font-weight-normal text-center">
                     <h2 class="section-heading">Venue</h2>
                     <h3 class="section-subheading text-muted">EAPS18 will be held at the Translational Research Institute (TRI) in Brisbane.</h3>
                 </div>
+
+
             </div>
+                <p class="text-justify information">
+                    The Translational Research Institute (TRI) is where science, medicine and industry intersect. TRI provides innovative medical research, development, and translation.
+                </p>
+                <p class="text-justify information">
+                    This unique, award winning facility is home to a range of cutting edge science and technology developments. TRI is at the forefront of prevention, treatment and diagnosis of modern day health problems and diseases.
+                </p>
             <div>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d64948.84817720879!2d153.00807027042364!3d-27.502394928342433!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b915a65c10b2ec1%3A0x110d5b93a0123496!2sTranslational+Research+Institute!5e0!3m2!1sen!2sau!4v1525669308442" width=100% height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
+                <p class="text-justify information">
+                    Supported by a grant from the Australian and Queensland Governments, and situated on Brisbane’s Princess Alexandra (PA) Hospital campus, TRI combines the research intellect and capability of the Queensland Government, Queensland University of Technology, The University of Queensland and Mater Research.
+                </p>
+                <p class="text-justify information">
+                    TRI leases one of its buildings to the biopharmaceutical manufacturer, Patheon Biologics, making it one of a few places in the world where new biopharmaceuticals and treatments can be discovered, produced, clinically tested and manufactured in the one location.
+                </p>
+                <p class="text-justify information">
+                    The translational success of founding CEO Professor Ian Frazer’s Gardasil vaccine for cervical cancer acted as the catalyst and inspiration for TRI to become a reality in 2013. Professor Frazer understood first-hand the challenges of progressing his research through a complicated system to arrive at a place where it would benefit society.
+                </p>
+                <p class="text-justify information">
+                    As a result TRI is Australia’s first translational institute conceived and constructed to interface with patients, clinicians, scientists, mathematicians, health economists and engineers.
+                </p>
         </div>
     </section>
