ie cant do animations without explicit js instrucitons

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
                         {% for network in site.social %}
-                        <li><a class="social-thing {{ network.title }}"" href="{{ network.url }}"></a>
+                        <li><a class="social-thing {{ network.title }}" href="{{ network.url }}"></a>
                         </li>
                         {% endfor %}
                     </ul>
