--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -10,15 +10,39 @@
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <a href="https://www.tri.edu.au/translational-research-institute-australia">
-                        <img src="/img/logos/tri_logo.png" class="img-responsive img-centered" alt="">
+                        <img src="/img/logos/tri.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <a href="http://www.emblaustralia.org/">
-                        <img src="/img/logos/embl-australia.png" class="img-responsive img-centered" alt="">
+                        <img src="/img/logos/embl.jpg" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
-
+                <div class="col-md-3 col-sm-6">
+                    <a href="https://www.sahmri.org/">
+                        <img src="/img/logos/SAHMRI.jpg" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <a href="https://www.csl.com/">
+                        <img src="/img/logos/CSL.jpg" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+                 <div class="col-md-3 col-sm-6">
+                    <a href="https://www.monash.edu/discovery-institute/">
+                        <img src="/img/logos/monash.png" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <a href="https://www.monash.edu/discovery-institute/">
+                        <img src="/img/logos/scientifix-logo.png" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <a href="https://www.monash.edu/discovery-institute/">
+                        <img src="/img/logos/waters.png" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
             </div>
         </div>
     </section>
