--- a/_includes/biographies.html
+++ b/_includes/biographies.html
@@ -18,6 +18,7 @@
                     <div class="team-member"  id="{{ member.id }}">
                         <h4>{{ member.name }}</h4>
                         <p class="text-muted">{{ member.theme }} Speaker</p>
+                        <p>{{ member.bio }}</p>
                     </div>
                 </div>
                 {% endfor %}
