--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,6 +9,7 @@
             </div>
             <svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 3937 1456" width="100%" height="100%" id="svg_region">
             </svg>
+            <a href="https://shop.monash.edu/embl-australia-phd-symposium-registration.html" class="page-scroll btn btn-xl">REGISTER NOW!</a><br><br>
 			<div class="col-lg-8 col-lg-offset-2 text-center intro-mid">
 				5<sup>th</sup> Annual EMBL Australia Postgraduate Symposium
 			</div>
