--- a/_includes/register.html
+++ b/_includes/register.html
@@ -4,7 +4,8 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Register</h2>
-					<h3 class="section-subheading text-muted">Registration opens 12th of June!</h3>
+					<h3 class="section-subheading text-muted">Registration is now open!</h3>
+
                 </div>
             </div>
             <div class="row text-center">
@@ -14,7 +15,7 @@
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Online Registration</h4>
-					<p class="text-muted">Not yet available.</p>
+                    <a href="https://shop.monash.edu/embl-australia-phd-symposium-registration.html" class="page-scroll btn btn-xl">Register Now!</a>                
                 </div>
             </div>
         
