--- a/_includes/speakers.html
+++ b/_includes/speakers.html
@@ -8,8 +8,8 @@
                 </div>
             </div>
 				<div class="team-member">
-					<img src="/img/people/placeholder.jpg" class="img-responsive img-circle img-speaker" alt="">
-					<h4>Professor Ian Frazer</h4>
+					<img src="/img/people/Ian_Frazer_300px.jpg" class="img-responsive img-circle img-speaker" alt="">
+					<h4>Prof. Ian Frazer</h4>
 					<p class="text-muted">Keynote Speaker</p>
 				</div>
 
