--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -34,12 +34,12 @@
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="https://www.monash.edu/discovery-institute/">
+                    <a href="http://www.scientifix.com.au/">
                         <img src="/img/logos/scientifix-logo.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="https://www.monash.edu/discovery-institute/">
+                    <a href="https://www.waters.com/">
                         <img src="/img/logos/waters.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
