--- a/_includes/css/eaps.css
+++ b/_includes/css/eaps.css
@@ -30,9 +30,15 @@
   .navbar-brand {
     padding: 12px;
   }
-
-
 }
+
+.register {
+  max-width: 800px;
+  padding: 10px;
+  color: black;
+  margin-left: auto;
+  margin-right: auto;
+  }
 
 .twitter-timeline {
   max-height: 1000px;
