--- a/_includes/register.html
+++ b/_includes/register.html
@@ -1,23 +1,35 @@
 <!-- Registration Section -->
-    <section id="register"  class="bg-light-gray">
+    <section id="register">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Register</h2>
 					<h3 class="section-subheading text-muted">Registration is now open, as of the 12<sup>th</sup> of June!</h3>
-                    <p>Please register using the link below.</p> 
                 </div>
             </div>
-            <div class="row text-center">
-                <div>
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Online Registration</h4>
-                    <a href="https://shop.monash.edu/embl-australia-phd-symposium-registration.html" class="page-scroll btn btn-xl">Register Now!</a>
-                </div>
-            </div>
-        
+            <div class="register">
+                <h3 class="text-align-left service-heading">Important Dates</h3>
+                  <table class="datestable text-align-left table table-striped">
+
+                    <tbody>
+                      <tr>
+                        <td><b>Tuesday 12<sup>th</sup> June</b></td>
+                        <td>Registration opens</td>
+                      </tr>
+                        <tr>
+                        <td><b>Friday 24<sup>th</sup> August</b></td>
+                        <td>Early Bird Registrations & Travel Grant Applications close</td>
+                      </tr>
+                                              <tr>
+                        <td><b>Friday 31<sup>st</sup> August</b></td>
+                        <td>Abstract submissions close</td>
+                      </tr>
+                    </tbody>
+                  </table>
+
+               
+            </div><div class="text-center">
+             <a href="https://shop.monash.edu/embl-australia-phd-symposium-registration.html" class="page-scroll btn btn-xl">Register Now!</a>
+         </div>
         </div>
     </section>
