--- a/_includes/venue.html
+++ b/_includes/venue.html
@@ -5,6 +5,7 @@
                 <div class="font-weight-normal text-center">
                     <h2 class="section-heading">Venue</h2>
                     <h3 class="section-subheading text-muted">EAPS18 will be held at the Translational Research Institute (TRI) in Brisbane.</h3>
+                    <a href="https://www.tri.edu.au/"><p class="large text-muted">Visit the TRI website</p></a>
                 </div>
 
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d64948.84817720879!2d153.00807027042364!3d-27.502394928342433!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b915a65c10b2ec1%3A0x110d5b93a0123496!2sTranslational+Research+Institute!5e0!3m2!1sen!2sau!4v1525669308442" width=100% height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
