--- a/_includes/register.html
+++ b/_includes/register.html
@@ -8,6 +8,10 @@
                 </div>
             </div>
             <div class="register">
+
+              <div class="text-center">
+             <a href="https://shop.monash.edu/embl-australia-phd-symposium-registration.html" class="page-scroll btn btn-xl">Register Now!</a>
+           </div>
                 <h3 class="text-align-left service-heading">Important Dates</h3>
                   <table class="datestable text-align-left table table-striped">
 
@@ -24,12 +28,22 @@
                         <td><b>Friday 31<sup>st</sup> August</b></td>
                         <td>Abstract submissions close</td>
                       </tr>
+                      </tr>
+                      <tr>
+                        <td><b>Monday 1<sup>st</sup> October</b></td>
+                        <td>Notification of oral presentations and travel grants</td>
+                      </tr>
+                      <tr>
+                        <td><b>Monday 15<sup>th</sup> October</b></td>
+                        <td>Notification of poster presentations</td>
+                      </tr>
                     </tbody>
                   </table>
+                <h3 class="text-align-left service-heading">Travel Grants</h3>
+                To apply for a travel grant, download and submit the Travel Grant Template from the Monash.Shop registration site when you register. Applicants will be notified if they are successful for a travel grant on Monday 1 October.  
 
                
-            </div><div class="text-center">
-             <a href="https://shop.monash.edu/embl-australia-phd-symposium-registration.html" class="page-scroll btn btn-xl">Register Now!</a>
+            </div>
          </div>
         </div>
     </section>
