--- a/_includes/register.html
+++ b/_includes/register.html
@@ -37,12 +37,36 @@
                         <td><b>Monday 15<sup>th</sup> October</b></td>
                         <td>Notification of poster presentations</td>
                       </tr>
+                      <tr>
+                        <td><b>Wednesday 28<sup>th</sup> November</b></td>
+                        <td>First day of EAPS 2018</td>
+                      </tr>
                     </tbody>
                   </table>
+                
+              <h3 class="text-align-left service-heading">Abstract Submission</h3>
+                To submit an abstract for a poster or oral presentation, download the Abstract Template from the Monash.Shop registration site when you register. 
+                <h4>Poster presentations</h4>
+                <ul>
+                  <li>All posters must be in portrait format, A0 size</li>
+                  <li>Applicants will be notified if their abstract is successful on Monday 15 October</li>
+                  <li>Selected successful poster abstracts will be asked to present their poster in the form of a “lightning talk” before their poster session</li>
+                </ul>
+                <h4>Oral presentations</h4>
+                <ul>
+                  <li>All presentations are limited to an 8 min talk with 2 min question time</li>
+                  <li>Slide presentations will need to be given to an EAPS committee member at the conference</li>
+                  <li>Applicants will be notified if their abstract is successful on Monday 1<sup>st</sup> October</li>
+                </ul>
+                 <h4>Lightning talks</h4>
+                <ul>
+                  <li>Selected successful poster abstracts will be asked to present their poster in the form of a “lightning talk” before their poster session</li>
+                  <li>All presentations are limited to a 2 min talk with no question time</li>
+                  <li>A single, static slide is permitted; this will need to be given to an EAPS committee member at the conference</li>
+                </ul>
                 <h3 class="text-align-left service-heading">Travel Grants</h3>
-                To apply for a travel grant, download and submit the Travel Grant Template from the Monash.Shop registration site when you register. Applicants will be notified if they are successful for a travel grant on Monday 1 October.  
-
-               
+                To apply for a travel grant, download and submit the Travel Grant Template from the Monash.Shop registration site when you register. Applicants will be notified if they are successful for a travel grant on Monday 1<sup>st</sup> October.  
+          
             </div>
          </div>
         </div>
