--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -39,6 +39,9 @@
                         <a href="/programme">Programme</a>
                     </li>
                     <li>
+                        <a href="/faq">FAQ</a>
+                    </li>
+                    <li>
 						<a href="/register">Register</a>
                     </li>
                 </ul>
