--- a/_includes/programme.html
+++ b/_includes/programme.html
@@ -20,7 +20,7 @@
                                     <h4 class="subheading">28th of November</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">The symposium begins in Brisbane!</p>
+                                    <p class="text-muted">The symposium begins in Brisbane! Registration, Welcome and Keynote Addresses, as well as the Science and Society Panel.</p>
                                 </div>
                             </div>
                         </li>
@@ -34,7 +34,7 @@
                                     <h4 class="subheading">29th of November</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">The second day of EAPS18.</p>
+                                    <p class="text-muted">The second day of EAPS18. Poster sessions and talks, concluding in the Symposium Dinner.</p>
                                 </div>
                             </div>
                         </li>
@@ -48,7 +48,7 @@
                                     <h4 class="subheading">30th of November</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">The final day of the symposium.</p>
+                                    <p class="text-muted">The final day of the symposium. All remaining talks, posters, and invited speakers, with awards and final remarks finishing by around 5pm.</p>
                                 </div>
                             </div>
                         </li>
