--- a/_includes/register.html
+++ b/_includes/register.html
@@ -38,6 +38,10 @@
                         <td>Notification of poster presentations</td>
                       </tr>
                       <tr>
+                        <td><b>Friday 2<sup>nd</sup> November</b></td>
+                        <td>Registration closes</td>
+                      </tr>
+                      <tr>
                         <td><b>Wednesday 28<sup>th</sup> November</b></td>
                         <td>First day of EAPS 2018</td>
                       </tr>
