--- a/_includes/register.html
+++ b/_includes/register.html
@@ -12,6 +12,30 @@
               <div class="text-center">
              <a href="https://shop.monash.edu/embl-australia-phd-symposium-registration.html" class="page-scroll btn btn-xl">Register Now!</a>
            </div>
+
+           <h3 class="text-align-left service-heading">Registration Cost</h3>
+           <table class="datestable text-align-left table table-striped">
+
+                    <tbody>
+                      <tr>
+                        <td><b>Early bird + free dinner</b></td>
+                        <td>$85 (First 25 people by Friday 24 August)</td>
+                      </tr>
+                      <tr>
+                        <td><b>Early bird</b></td>
+                        <td>$85 (by Friday 24 August)</td>
+                      </tr>
+                      <tr>
+                        <td><b>Regular registration</b></td>
+                        <td>$100 (by Friday 2 November)</td>
+                      </tr>
+                      <tr>
+                        <td><b>Dinner</b></td>
+                        <td>$25 (by Friday 2 November)</td>
+                      </tr>
+                    </tbody>
+                  </table>
+
                 <h3 class="text-align-left service-heading">Important Dates</h3>
                   <table class="datestable text-align-left table table-striped">
 
@@ -47,27 +71,8 @@
                       </tr>
                     </tbody>
                   </table>
-                
-              <h3 class="text-align-left service-heading">Abstract Submission</h3>
-                To submit an abstract for a poster or oral presentation, download the Abstract Template from the Monash.Shop registration site when you register. 
-                <h4>Poster presentations</h4>
-                <ul>
-                  <li>All posters must be in portrait format, A0 size</li>
-                  <li>Applicants will be notified if their abstract is successful on Monday 15 October</li>
-                  <li>Selected successful poster abstracts will be asked to present their poster in the form of a “lightning talk” before their poster session</li>
-                </ul>
-                <h4>Oral presentations</h4>
-                <ul>
-                  <li>All presentations are limited to an 8 min talk with 2 min question time</li>
-                  <li>Slide presentations will need to be given to an EAPS committee member at the conference</li>
-                  <li>Applicants will be notified if their abstract is successful on Monday 1<sup>st</sup> October</li>
-                </ul>
-                 <h4>Lightning talks</h4>
-                <ul>
-                  <li>Selected successful poster abstracts will be asked to present their poster in the form of a “lightning talk” before their poster session</li>
-                  <li>All presentations are limited to a 2 min talk with no question time</li>
-                  <li>A single, static slide is permitted; this will need to be given to an EAPS committee member at the conference</li>
-                </ul>
+
+               
                 <h3 class="text-align-left service-heading">Travel Grants</h3>
                 To apply for a travel grant, download and submit the Travel Grant Template from the Monash.Shop registration site when you register. Applicants will be notified if they are successful for a travel grant on Monday 1<sup>st</sup> October.  
           
