--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -43,6 +43,11 @@
                         <img src="/img/logos/waters.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
+                <div class="col-md-3 col-sm-6">
+                    <a href="https://www.waters.com/">
+                        <img src="/img/logos/macrogen_oceania.png" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
             </div>
         </div>
     </section>
